--- a/src/classes/CountryTriggerHandler.cls
+++ b/src/classes/CountryTriggerHandler.cls
@@ -14,57 +14,48 @@ public with sharing class CountryTriggerHandler {
     *                     V_1.1 - Modified - Sagar Nirwal - 02/09/2022 - Details what you modified
     **/
     public static void countryJsonData(List<Country__c> newCountryList ,Map<Id,Country__c> oldCountryMap){
-        if(!newCountryList.isEmpty()){   
-            Set<Id> setOfCountryId = new Set<Id>();
-            for(Country__c cou : newCountryList){
-                if(oldCountryMap != null && (cou.Total_District__c != 
-                    oldCountryMap.get(cou.id).Total_District__c || cou.Total_States__c 
-                    != oldCountryMap.get(cou.id).Total_States__c )){   
-                    setOfCountryId.add(cou.Id);               
-                }
+
+        Set<Id> setOfCountryId = new Set<Id>();
+        for(Country__c cou : newCountryList){
+            if(oldCountryMap != null){   
+                setOfCountryId.add(cou.Id); 
+                System.debug(cou);              
             }
-            if(!setOfCountryId.isEmpty()){
-                List<State__c> listOfState = [SELECT Id, country__r.Id,country__r.Name,country__r.Total_States__c,
-                                                country__r.Total_District__c, Name
-                                                FROM State__c WHERE country__r.Name IN : setOfCountryId];
-                Map<Id,List<State__c>> mapOfStatewithCountryId = new Map<Id,List<State__c>>();
-                for(State__c st : listOfState){
-                    if(!mapOfStatewithCountryId.containsKey(st.Country__c)){
-                        mapOfStatewithCountryId.get(st.Country__c).add(st);
-                    }
-                }
+        }
+        if(!setOfCountryId.isEmpty()){
 
-                if(!newCountryList.isEmpty()){
-                    for(Country__c cou : newCountryList){
-                        if(setOfCountryId.contains(cou.Id)) {  
-                            Country wCountry = new Country();
-                            wCountry.countryName = mapOfStatewithCountryId.get(cou.Id).Country__r.Name;
-                            wCountry.countryCode = mapOfStatewithCountryId.get(cou.Id).Country__r.Country_Code__c;
-                            wCountry.states = new List<states>();
-                            wCountry.Total_Number_Of_Districts = (Integer)cou.Total_District__c;
-                            wCountry.Total_Number_Of_States = (Integer)cou.Total_States__c;
+            Map<Id,State__c> mapOfStatewithCountryId = new Map<Id,State__c>([SELECT Id, Country__c,country__r.Id,country__r.Name,
+                                                                            Country__r.Country_Code__c,country__r.Total_States__c,
+                                                                            country__r.Total_District__c, Name,Total_District__c,
+                                                                            (SELECT id, Name FROM Districts__r)
+                                                                            FROM State__c WHERE country__r.Id IN : setOfCountryId]);
+            System.debug(mapOfStatewithCountryId.values());
 
-                            for(State__c st : listOfState){ 
-                                if(mapOfStatewithCountryId.containsKey(st.Id)){  
-                                    if(st.Country__c == cou.Id){
-                                        States wrapState = new States();
-                                        wrapState.stateName = st.Name;
-                                        wrapState.districts = new List<Districts>();
-                                        wrapState.Total_Number_Of_Districts = (Integer)st.Total_District__c; 
+            for(Country__c cou : newCountryList){
+                if(setOfCountryId.contains(cou.Id)) {  
+                    Country wCountry = new Country();
+                    wCountry.countryName = cou.Name;
+                    wCountry.countryCode = cou.Country_Code__c;
+                    wCountry.states = new List<states>();
+                    System.debug(cou.Total_District__c);
+                    System.debug(cou.Total_States__c);
+                    wCountry.Total_Number_Of_Districts = (Integer)cou.Total_District__c;
+                    wCountry.Total_Number_Of_States = (Integer)cou.Total_States__c;
 
-                                        for(District__c dt : st.Districts__r){
-                                            Districts wrapDistrict = new Districts();
-                                            wrapDistrict.districtName = dt.Name;
-                                            wrapState.districts.add(wrapDistrict);
-                                        }
-                                        wCountry.states.add(wrapState);   
-                                    }
-                                }
-                            }
-                            String jString = JSON.serialize(wCountry);
-                            cou.Country_JASON__c = jString;
+                    for(State__c st : mapOfStatewithCountryId.values()){    
+                        States wrapState = new States();
+                        wrapState.stateName = st.Name;
+                        wrapState.districts = new List<Districts>();
+                        wrapState.Total_Number_Of_Districts = String.valueof(st.Total_District__c); 
+                        for(District__c dt : st.Districts__r){
+                            Districts wrapDistrict = new Districts();
+                            wrapDistrict.districtName = dt.Name;
+                            wrapState.districts.add(wrapDistrict);
                         }
-                    } 
+                        wCountry.states.add(wrapState);
+                    }
+                    String jString = JSON.serialize(wCountry);
+                    cou.Country_JASON__c = jString;
                 }
             }
         }     
@@ -80,7 +71,7 @@ public with sharing class CountryTriggerHandler {
     public class States{
         Public string stateName{get; set;}
         Public List<Districts> districts{get; set;}
-        public Integer Total_Number_Of_Districts{get; set;}
+        public String Total_Number_Of_Districts{get; set;}
     }
     public class Districts{
         Public String districtName{get; set;}
