--- a/src/classes/ContactTriggerHandler.cls
+++ b/src/classes/ContactTriggerHandler.cls
@@ -14,27 +14,23 @@ public with sharing class ContactTriggerHandler {
     *                     V_1.1 - Modified - Sagar Nirwal - 28/08/2022 - Details what you modified
     **/
     public static void synchronizeContactAccountPropertyRecord(List<Contact> newContactList) {
-        if(!newContactList.isEmpty()){
-            Set<id> accountIdSet = new Set<id>();
-            for(Contact con: newContactList){
-                if(con.Status__c == null){
-                    accountIdSet.add(con.AccountId);   
-                    System.debug(accountIdSet);
-                }
-            } 
-            Map<Id,Account> accMap = new Map<Id,Account>([SELECT Id,Status__c,Property__c,Property__r.Status__c,Property__r.Name 
+        Set<id> accountIdSet = new Set<id>();
+        for(Contact con: newContactList){
+            if(con.Status__c == null && !String.isBlank(con.Status__c)){
+                accountIdSet.add(con.AccountId);   
+                System.debug(accountIdSet);
+            }
+        } 
+        Map<Id,Account> accMap = new Map<Id,Account>([SELECT Id,Status__c,Property__c,Property__r.Status__c,Property__r.Name 
                                                         FROM Account WHERE id IN: accountIdSet]);
-            System.debug(accMap);                                                            
-            for(Contact con: newContactList){
-                Account acc = accMap.get(con.AccountId);
-                if(acc.Status__c != null){
-                    con.Status__c = acc.Status__c; 
-                }
-                else if(acc.Property__r.Status__c!=null){
-                    con.Status__c = acc.Property__r.Status__c;
-                }
+        System.debug(accMap);                                                            
+        for(Contact con: newContactList){
+            Account acc = accMap.get(con.AccountId);
+            if(acc.Status__c != null && !String.isBlank(acc.Status__c)){
+                con.Status__c = acc.Status__c; 
+            }else if(acc.Property__r.Status__c!=null){
+                con.Status__c = acc.Property__r.Status__c;
             }
         }
     }
 }
-
