--- a/src/classes/ContactTriggerHandler.cls
+++ b/src/classes/ContactTriggerHandler.cls
@@ -16,13 +16,13 @@ public with sharing class ContactTriggerHandler {
     public static void synchronizeContactAccountPropertyRecord(List<Contact> newContactList) {
         Set<id> accountIdSet = new Set<id>();
         for(Contact con: newContactList){
-            if(con.Status__c == null && !String.isBlank(con.Status__c)){
+            if(con.Status__c != null && !String.isBlank(con.Status__c)){
                 accountIdSet.add(con.AccountId);   
                 System.debug(accountIdSet);
             }
         } 
         Map<Id,Account> accMap = new Map<Id,Account>([SELECT Id,Status__c,Property__c,Property__r.Status__c,Property__r.Name 
-                                                        FROM Account WHERE id IN: accountIdSet]);
+                                                        FROM Account WHERE Id IN: accountIdSet]);
         System.debug(accMap);                                                            
         for(Contact con: newContactList){
             Account acc = accMap.get(con.AccountId);
@@ -30,7 +30,8 @@ public with sharing class ContactTriggerHandler {
                 con.Status__c = acc.Status__c; 
             }else if(acc.Property__r.Status__c!=null && !String.isBlank(acc.Property__r.Status__c)){
                 con.Status__c = acc.Property__r.Status__c;
-            }
+            } 
         }
     }
 }
+
