--- a/src/classes/ContactTriggerHandler.cls
+++ b/src/classes/ContactTriggerHandler.cls
@@ -14,24 +14,32 @@ public with sharing class ContactTriggerHandler {
     *                     V_1.1 - Modified - Sagar Nirwal - 28/08/2022 - Details what you modified
     **/
     public static void synchronizeContactAccountPropertyRecord(List<Contact> newContactList) {
-        Set<id> accountIdSet = new Set<id>();
+        Set<Id> setOfAccountIds = new Set<Id>();
         for(Contact con: newContactList){
-            if(con.Status__c != null && !String.isBlank(con.Status__c)){
-                accountIdSet.add(con.AccountId);   
-                System.debug(accountIdSet);
-            }
+            setOfAccountIds.add(con.AccountId);   
         } 
-        Map<Id,Account> accMap = new Map<Id,Account>([SELECT Id,Status__c,Property__c,Property__r.Status__c,Property__r.Name 
-                                                        FROM Account WHERE Id IN: accountIdSet]);
-        System.debug(accMap);                                                            
-        for(Contact con: newContactList){
-            Account acc = accMap.get(con.AccountId);
-            if(acc.Status__c != null && !String.isBlank(acc.Status__c)){
-                con.Status__c = acc.Status__c; 
-            }else if(acc.Property__r.Status__c!=null && !String.isBlank(acc.Property__r.Status__c)){
-                con.Status__c = acc.Property__r.Status__c;
-            } 
+        System.debug(setOfAccountIds);
+        if(!setOfAccountIds.isEmpty()){
+            Map<Id,Account> mapAccountWithId = new Map<Id,Account>([SELECT Id,Status__c,Property__c,Property__r.Status__c,Property__r.Name 
+                                                                    FROM Account WHERE Id IN: setOfAccountIds]);
+            System.debug(mapAccountWithId);                                                            
+            for(Contact con: newContactList){
+                if(con.Status__c == null) {
+                    for(Account acc : mapAccountWithId.values()) {
+                        if(con.AccountId == acc.Id) {
+                            if(acc.Status__c != null){
+                                con.Status__c = acc.Status__c;
+                                System.debug('Contact Status:======== ' + con.Status__c); 
+                            }else if(acc.Status__c == null){
+                                con.Stataus__c = acc.Property__r.Status__c;
+                                acc.Status__c = acc.Property__r.Status__c;
+                                System.debug('Contact Status:======== ' + con.Status__c);
+                                System.debug('Account Status:======== ' + acc.Status__c);
+                            } 
+                        }
+                    }
+                }
+            }
         }
     }
 }
-
