--- a/src/classes/CountryTriggerHandler.cls
+++ b/src/classes/CountryTriggerHandler.cls
@@ -17,8 +17,8 @@ public with sharing class CountryTriggerHandler {
 
         Set<Id> setOfCountryId = new Set<Id>();
         for(Country__c cou : newCountryList){
-            if(oldCountryMap != null && (cou.Total_States__c !=oldCountryMap.get(cou.Id).Total_States__c )
-               ||(cou.Total_District__c !=oldCountryMap.get(cou.Id).Total_District__c )){   
+            if(oldCountryMap != null && ((cou.Total_States__c !=oldCountryMap.get(cou.Id).Total_States__c )
+               ||(cou.Total_District__c !=oldCountryMap.get(cou.Id).Total_District__c ))){   
                 setOfCountryId.add(cou.Id); 
                 System.debug(cou);              
             }
